--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=oracle
 DB_HOST=127.0.0.1
 DB_PORT=1521
-DB_SERVICE_NAME=XEPDB1
+DB_SERVICE_NAME=ORCLCDB
 DB_USERNAME=FIDE_TECHLAB_USER
 DB_PASSWORD=FIDE_TECHLAB_USER
 
